@@ -15,8 +15,6 @@ Build-Depends: cdbs,
                libnotify-dev (>= 0.7.0),
                libxt-dev,
                libxi-dev,
-               libxrandr-dev,
-               libxrender-dev,
                libfontconfig1-dev,
                libxext-dev,
                libx11-dev,
@@ -28,7 +26,8 @@ Build-Depends: cdbs,
                gsettings-desktop-schemas-dev,
                libgnome-desktop-3-dev (>= 2.91.5),
                libpulse-dev (>= 0.9.16),
-               libcanberra-gtk3-dev
+               libcanberra-gtk3-dev,
+               libpolkit-gobject-1-dev
 Standards-Version: 3.9.1
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-gnome/desktop/unstable/gnome-settings-daemon/
 Vcs-Svn: svn://svn.debian.org/svn/pkg-gnome/desktop/unstable/gnome-settings-daemon/
@@ -40,6 +39,7 @@ Depends: ${shlibs:Depends},
          libgnome2-common,
          gsettings-desktop-schemas,
          nautilus-data (>= 2.91.3-1)
+Recommends: pulseaudio
 Breaks: rhythmbox (<< 0.11.5),
         banshee (<< 0.13.2+dfsg-7),
         totem (<< 2.22.0),
