@@ -1,4 +1,5 @@
 debian/tmp/etc/xdg/autostart /usr/share/gnome
+debian/tmp/etc/dbus-1
 debian/tmp/usr/lib/gnome-settings-daemon*
 debian/tmp/usr/share/icons
 debian/tmp/usr/share/locale
@@ -7,3 +8,4 @@ debian/tmp/usr/share/gnome-control-center
 debian/tmp/usr/share/dbus-1
 debian/tmp/usr/share/GConf
 debian/tmp/usr/share/glib-2.0
+debian/tmp/usr/share/polkit-1
