@@ -1,5 +1,15 @@
 gnome-settings-daemon (2.91.8-2) UNRELEASED; urgency=low
 
+  [ Sebastien Bacher ]
+  * debian/gnome-settings-daemon.install:
+    - install the polkit files there
+  * debian/control.in:
+    - build-depends on libpolkit-gobject-1-dev
+    - drop the build-depends on libxrandr-dev and libxrender-dev, the 
+      configure doesn't use those in the new version
+    - recommends pulseaudio since it's used for the multimedia keys
+    (Close: #611198)
+
   * debian/patches/02_missing_libs.patch:
     + Removed. This was fixed upstream in a different way a long time
       ago. The patch was also disabled on 2.91.5.1-1 without any bad
